# ScorePilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
alembic/: env.py
alembic/versions/: 1e6b3b4f80ab_add_dataset_id_to_model.py  31ecc7b72201_add_dataset_table.py  d83313ec81f9_initial_model_table.py
deploy/: .env.example  Caddyfile  docker-compose.yml
docs/: ARCHITECTURE.md  COMPONENT_SELECTION.md  DEPLOYMENT.md  DEVELOPMENT.md  IDEAS_FROM_2009_NOTES.md  PUBLISHING.md  SECURITY_AUDIT.md
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.js
frontend/e2e/: app.spec.ts  ui-features.spec.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  echarts.ts  format.ts  spec.ts  toast.svelte.ts
frontend/src/lib/actions/: pulse.ts
frontend/src/lib/components/: Chart.svelte  ComponentExplorer.svelte  ContributionModal.svelte  Explorer.svelte  QualityPanel.svelte  Ribbon.svelte  Toaster.svelte  VariableInspector.svelte  VariableRawModal.svelte
frontend/src/lib/grid/: DataGrid.svelte  README.md  grid-types.ts  index.ts
frontend/src/lib/plots/: BarPlot.svelte  Histogram.svelte  LinePlot.svelte  PlotChart.svelte  README.md  ScatterPlot.svelte  index.ts  link.svelte.ts  options.ts  plot-types.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/datasets/[id]/: +page.svelte
frontend/src/routes/models/: +page.svelte
frontend/src/routes/models/[id]/: +page.svelte
frontend/src/routes/playground/: +page.svelte
src/scorepilot/: __init__.py  app.py  config.py  dataset_store.py  main.py  samples.py  schemas.py
src/scorepilot/api/: __init__.py  datasets.py  deps.py  exploration.py  models.py
src/scorepilot/core/: __init__.py  _pandas.py  cross_validation.py  modeling.py  pca.py  preprocessing.py  profiling.py  quality.py  schema.py  transforms.py  workset.py
src/scorepilot/db/: __init__.py  models.py  repository.py  session.py
src/scorepilot/web/: index.html
tests/: test_api.py  test_core_cross_validation.py  test_core_exploration.py  test_core_modeling.py  test_core_pca.py  test_main.py  test_repository.py
