[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scorepilot"
version = "0.19.0"
description = "Web-based tool for PCA/PLS model analysis in chemometrics."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Kevin Dunn" }]
keywords = ["chemometrics", "PCA", "PLS", "multivariate", "process analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "process-improve>=1.38,<2",
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.4",
]

[project.urls]
Homepage = "https://github.com/kgdunn/ScorePilot"
Repository = "https://github.com/kgdunn/ScorePilot"

[project.scripts]
scorepilot = "scorepilot.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scorepilot"]

[tool.hatch.build]
# The compiled Svelte bundle in src/scorepilot/web is gitignored (generated).
# `artifacts` force-includes it into the wheel so `uvx scorepilot` needs no Node.
artifacts = ["src/scorepilot/web/**/*"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["frontend", "alembic/versions", "src/scorepilot/web"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "ANN", "PTH"]
# A003: ORM primary-key columns are idiomatically named `id`.
ignore = ["ANN401", "A003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "ANN202", "S101"]
"alembic/**" = ["ANN001", "ANN201", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["scorepilot"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["frontend", "alembic/versions", "src/scorepilot/web", "**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
